# test.matching

./: CMakeLists.txt
projects/rd.1/: CMakeLists.txt  main.cpp  main.h
projects/rd.1/Draw/: lines.cpp
projects/rd.1/Helper/: AdjustPerspective.cpp  Shelf.cpp
projects/rd.1/KPDetector/: FindCameraMatrices.cpp  KPDetector.cpp  KPDetector.h
projects/rd.1/Provider/: ImageProvider.cpp  ImageProvider.h  Provider.cpp  Provider.h  VideoProvider.cpp  VideoProvider.h
projects/rd.1/State/: State.cpp  State.h
projects/rd.1/Template/: Template.h
projects/rd.2/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CMakeLists.txt  CameraCalibration.cpp  DebugHelpers.hpp  GeometryTypes.cpp  OppColorDescriptorExtractor.cpp  OppColorDescriptorExtractor.h  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  PortraitObs.cpp  PortraitObs.hpp  PortraitObsBuilder.cpp  PortraitObsBuilder.hpp  RobustMatcher.h  main.cpp
test-cases/tabaco/: pattern-list.txt
